# openapi/build/generate.json
@@ -12,7 +12,7 @@
       "url": "https://avatars.githubusercontent.com/u/84325077?s=200&v=4",
       "altText": "Formance"
     },
-    "version": "v1.0.20230809"
+    "version": "v1.0.20230816"
   },
   "servers": [
     {
@@ -855,6 +855,16 @@
               "type": "string",
               "example": "aHR0cHM6Ly9nLnBhZ2UvTmVrby1SYW1lbj9zaGFyZQ=="
             }
+          },
+          {
+            "name": "expand",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "items": {
+                "type": "string"
+              }
+            }
           }
         ],
         "responses": {
@@ -908,6 +918,16 @@
             "schema": {
               "type": "string",
               "example": "users:001"
+            }
+          },
+          {
+            "name": "expand",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "items": {
+                "type": "string"
+              }
             }
           }
         ],
@@ -968,15 +988,6 @@
             "name": "dryRun",
             "in": "query",
             "description": "Set the dry run mode. Dry run mode doesn't add the logs to the database or publish a message to the message broker.",
-            "schema": {
-              "type": "boolean",
-              "example": true
-            }
-          },
-          {
-            "name": "async",
-            "in": "query",
-            "description": "Set async mode.",
             "schema": {
               "type": "boolean",
               "example": true
@@ -1186,7 +1197,7 @@
           "Transactions"
         ],
         "summary": "List transactions from a ledger",
-        "description": "List transactions from a ledger, sorted by txid in descending order.",
+        "description": "List transactions from a ledger, sorted by id in descending order.",
         "operationId": "listTransactions",
         "parameters": [
           {
@@ -1289,6 +1300,16 @@
             "example": {
               "admin": "true"
             }
+          },
+          {
+            "name": "expand",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "items": {
+                "type": "string"
+              }
+            }
           }
         ],
         "responses": {
@@ -1342,15 +1363,6 @@
             }
           },
           {
-            "name": "async",
-            "in": "query",
-            "description": "Set async mode.",
-            "schema": {
-              "type": "boolean",
-              "example": true
-            }
-          },
-          {
             "name": "Idempotency-Key",
             "in": "header",
             "description": "Use an idempotency key",
@@ -1394,7 +1406,7 @@
         }
       }
     },
-    "/api/ledger/{ledger}/transactions/{txid}": {
+    "/api/ledger/{ledger}/transactions/{id}": {
       "get": {
         "tags": [
           "Ledger",
@@ -1414,7 +1426,7 @@
             }
           },
           {
-            "name": "txid",
+            "name": "id",
             "in": "path",
             "description": "Transaction ID.",
             "required": true,
@@ -1423,6 +1435,16 @@
               "format": "int64",
               "minimum": 0,
               "example": 1234
+            }
+          },
+          {
+            "name": "expand",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "items": {
+                "type": "string"
+              }
             }
           }
         ],
@@ -1450,7 +1472,7 @@
         }
       }
     },
-    "/api/ledger/{ledger}/transactions/{txid}/metadata": {
+    "/api/ledger/{ledger}/transactions/{id}/metadata": {
       "post": {
         "tags": [
           "Ledger",
@@ -1470,7 +1492,7 @@
             }
           },
           {
-            "name": "txid",
+            "name": "id",
             "in": "path",
             "description": "Transaction ID.",
             "required": true,
@@ -1485,15 +1507,6 @@
             "name": "dryRun",
             "in": "query",
             "description": "Set the dryRun mode. Dry run mode doesn't add the logs to the database or publish a message to the message broker.",
-            "schema": {
-              "type": "boolean",
-              "example": true
-            }
-          },
-          {
-            "name": "async",
-            "in": "query",
-            "description": "Set async mode.",
             "schema": {
               "type": "boolean",
               "example": true
@@ -1536,7 +1549,7 @@
         }
       }
     },
-    "/api/ledger/{ledger}/transactions/{txid}/revert": {
+    "/api/ledger/{ledger}/transactions/{id}/revert": {
       "post": {
         "tags": [
           "Ledger",
@@ -1556,7 +1569,7 @@
             }
           },
           {
-            "name": "txid",
+            "name": "id",
             "in": "path",
             "description": "Transaction ID.",
             "required": true,
@@ -1575,80 +1588,6 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/RevertTransactionResponse"
-                }
-              }
-            }
-          },
-          "default": {
-            "description": "Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/ledger/{ledger}/balances": {
-      "get": {
-        "tags": [
-          "Ledger",
-          "Balances"
-        ],
-        "summary": "Get the balances from a ledger's account",
-        "operationId": "getBalances",
-        "parameters": [
-          {
-            "name": "ledger",
-            "in": "path",
-            "description": "Name of the ledger.",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "example": "ledger001"
-            }
-          },
-          {
-            "name": "address",
-            "in": "query",
-            "description": "Filter balances involving given account, either as source or destination.",
-            "schema": {
-              "type": "string",
-              "example": "users:001"
-            }
-          },
-          {
-            "name": "pageSize",
-            "in": "query",
-            "description": "The maximum number of results to return per page.\n",
-            "example": 100,
-            "schema": {
-              "type": "integer",
-              "format": "int64",
-              "minimum": 1,
-              "maximum": 1000
-            }
-          },
-          {
-            "name": "cursor",
-            "in": "query",
-            "description": "Parameter used in pagination requests. Maximum page size is set to 15.\nSet to the value of next for the next page of results.\nSet to the value of previous for the previous page of results.\nNo other parameters can be set when this parameter is set.\n",
-            "schema": {
-              "type": "string",
-              "example": "aHR0cHM6Ly9nLnBhZ2UvTmVrby1SYW1lbj9zaGFyZQ=="
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/BalancesCursorResponse"
                 }
               }
             }
@@ -4382,9 +4321,7 @@
         "type": "object",
         "required": [
           "address",
-          "metadata",
-          "volumes",
-          "balances"
+          "metadata"
         ],
         "properties": {
           "address": {
@@ -4420,16 +4357,6 @@
                 "input": 100,
                 "output": 0
               }
-            }
-          },
-          "balances": {
-            "type": "object",
-            "additionalProperties": {
-              "type": "integer",
-              "format": "bigint"
-            },
-            "example": {
-              "COIN": 100
             }
           }
         }
@@ -4537,17 +4464,21 @@
           "metadata": {
             "$ref": "#/components/schemas/ledgerMetadata"
           },
-          "txid": {
+          "id": {
             "type": "integer",
             "format": "int64",
             "minimum": 0
+          },
+          "reverted": {
+            "type": "boolean"
           }
         },
         "required": [
           "postings",
           "timestamp",
-          "txid",
-          "metadata"
+          "id",
+          "metadata",
+          "reverted"
         ]
       },
       "ExpandedTransaction": {
@@ -4564,11 +4495,7 @@
               "postCommitVolumes": {
                 "$ref": "#/components/schemas/AggregatedVolumes"
               }
-            },
-            "required": [
-              "preCommitVolumes",
-              "postCommitVolumes"
-            ]
+            }
           }
         ]
       },
@@ -5632,6 +5559,7 @@
           "defaultCurrency",
           "defaultAsset",
           "accountName",
+          "type",
           "raw"
         ],
         "properties": {
@@ -5656,6 +5584,9 @@
             "type": "string"
           },
           "accountName": {
+            "type": "string"
+          },
+          "type": {
             "type": "string"
           },
           "raw": {
@@ -6066,7 +5997,7 @@
           },
           "sort": {
             "type": "string",
-            "example": "txid:asc"
+            "example": "id:asc"
           },
           "policy": {
             "type": "string",
@@ -6615,7 +6546,7 @@
             },
             "description": "Metadata associated with the wallet."
           },
-          "txid": {
+          "id": {
             "type": "integer",
             "format": "int64",
             "minimum": 0
@@ -6630,7 +6561,7 @@
         "required": [
           "postings",
           "timestamp",
-          "txid",
+          "ix",
           "metadata"
         ]
       },
